<resources>
    <string name="app_name">Sensor Switch App</string>
    <string name="humid_is_off">Humid is OFF</string>
    <string name="textview">TextView</string>
    <string name="analog_is_off">Analog is OFF</string>
    <string name="analog_is_on">Analog is ON</string>
    <string name="light_is_off">Light is OFF</string>
    <string name="light_is_on">Light is ON</string>
    <string name="mic_is_off">Mic is OFF</string>
    <string name="mic_is_on">Mic is ON</string>
    <string name="temp_is_off">Temp is OFF</string>
    <string name="temp_is_on">Temp is ON</string>
    <string name="message">Turn on and off the sensors</string>
    <string name="toggle_1">toggle 1</string>
    <string name="toggle_2">toggle 2</string>
    <string name="toggle_3">toggle 3</string>
    <string name="toggle_4">toggle 4</string>

    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
</resources>
