<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.project.youcef.sensorswitchapp.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:id="@+id/textView"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ToggleButton
        android:text="@string/toggle_4"
        android:textOn="@string/analog_is_on"
        android:textOff="@string/analog_is_off"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:id="@+id/analogTBtn"
        android:onClick="analogTBtn"
        android:layout_alignBottom="@+id/tempTBtn"
        android:layout_alignLeft="@+id/micTBtn"
        android:layout_alignStart="@+id/micTBtn" />

    <ToggleButton
        android:text="@string/toggle_2"
        android:textOn="@string/mic_is_on"
        android:textOff="@string/mic_is_off"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:id="@+id/micTBtn"
        android:onClick="micTBtn"
        android:checked="false"
        android:layout_marginRight="11dp"
        android:layout_marginEnd="11dp"
        android:layout_alignTop="@+id/lightTBtn"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:layout_above="@+id/lightTBtn"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="17dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/intel_edison_logo"
        android:id="@+id/edisonlogo"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="" />

    <ToggleButton
        android:text="@string/toggle_3"
        android:textOn="@string/temp_is_on"
        android:textOff="@string/temp_is_off"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:id="@+id/tempTBtn"
        android:onClick="tempTBtn"
        android:layout_marginBottom="49dp"
        android:layout_above="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ToggleButton
        android:text="@string/toggle_1"
        android:textOn="@string/light_is_on"
        android:textOff="@string/light_is_off"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:id="@+id/lightTBtn"
        android:onClick="lightTBtn"
        android:textColorLink="@android:color/holo_green_light"
        android:layout_marginBottom="31dp"
        android:layout_above="@+id/tempTBtn"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
</RelativeLayout>
